Java: Sudoku com Interface v2